# ragrules

./: 404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  embeded.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sentences.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
cloudfunctions/: main.py  preprocessing_cf.md  requirements.txt
cloudfunctions/chunker/: chunker.py  embedder.py  gs_functions.py  main.py  requirements.txt
cloudfunctions/extract_pdf/: preprocessing_cf.md
docs/: index.md  modules.md
modules/: index.html
ragrules/: Context_Retriever.py  GeminiClient.py  MainQuestion.py  app.py  chunker.py  cloud_function.py  foo.py  preprocess.py  prompts.py
ragrules/cloudfunctions/chunker/: chunker.py  embedder.py  langchain_chunker.py  main.py
ragrules/cloudfunctions/extract_pdf/: main.py  preprocessing_cf.md  requirements.txt
ragrules/cloudfunctions/game_principle/: main.py
ragrules/interface/: app.py  games_functions.py
ragrules/interface/datas/: board_games.json
ragrules/vector_search/: homemade_vector_search.py  init.py  use_index.py  use_index_nb.ipynb  use_index_old.py  vector_search.py
search/: search_index.json
tests/: test_chunker.py  test_embedder.py  test_foo.py  test_homemade_vector_search.py
tests/datas/: crack_list_embedded.json  crack_list_sentences.json  langchain_sw_embedded.json  langchain_sw_sentences.json  sw_embedded.json  sw_sentences.json  test_base_vector.txt  test_preprocessed.json
