[tool.poetry]
name = "ragrules"
version = "0.0.1"
description = "Project arount RAG applied to game rules, using cookiecutter-poetry."
authors = ["Thibault Romann <fthibault.romann@gmail.com>"]
repository = "https://github.com/ThbltRmn/ragrules"
documentation = "https://ThbltRmn.github.io/ragrules/"
readme = "README.md"
packages = [
  {include = "ragrules"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^3.0.3"
pypdf = "^5.0.1"
google-cloud-storage = "^2.18.2"
cloudevents = "^1.11.0"
functions-framework = "^3.8.1"
google-generativeai = "^0.8.3"
google = "^3.0.0"
google-cloud-aiplatform = "^1.70.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
pytest-env = "^1.1.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["ragrules"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
ignore_missing_imports = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "GEMINI_API_KEY=lakeydethibolestartupeur"
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["ragrules"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
